--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
-    "deploy": "gh-pages -d dist",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -35,9 +35,9 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fibers": "^5.0.0",
-    "gh-pages": "^3.1.0",
     "jest": "^26.5.0",
     "prettier": "^2.1.2",
+    "push-dir": "^0.4.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
     "vue-jest": "^3.0.4",
