--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.3.0",
     "@nuxt/types": "^2.14.7",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
